--- a/Experimento02_pinguinos.ipynb
+++ b/Experimento02_pinguinos.ipynb
@@ -17,16 +17,16 @@
    },
    "source": [
     "El experimento consiste en clasificar de manera adecuada las especies de pigüinos entre:\n",
-    "  adeline\n",
-    "  cskjvnhs\n",
-    "  asgg\n",
+    "  Adelie\n",
+    "  Chinstrap\n",
+    "  Gentoo\n",
     "\n",
     "Variables entrada:\n",
     "\n",
-    "  isla\n",
-    "  tamaño\n",
-    "  peso\n",
-    "  sexo\n",
+    "  Isla\n",
+    "  Tamaño\n",
+    "  Peso\n",
+    "  Sexo\n",
     "    \n",
     "Variables salida:\n",
     "\n",
